<resources>
    <string name="app_name">ToDoodle</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_login"> Log in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="invalid_confirmpassword"> Password and Confirm Password must be the same</string>
    <string name="signup_failed">"Signup failed"</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_todo">TodoActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Tasks</string>
    <string name="create_task_form_fragment_label">Create Task</string>
    <string name="next">Next</string>
    <string name="add">+</string>
    <string name="previous">Previous</string>
    <string name="done">Done</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="required_icon">*</string>

    <string-array name="task_cat_array">
        <item>School</item>
        <item>Work</item>
        <item>Life</item>
        <item>Other</item>
    </string-array>
    <string-array name="task_goal_array">
        <item>Lose weight</item>
        <item>Better grade</item>
        <item>More income</item>
        <item>Other</item>
    </string-array>
    <string-array name="task_level_array">
        <item>Non-negotiables</item>
        <item>Nice to haves</item>
    </string-array>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">To Doodle</string>
    <string name="nav_header_subtitle">Illustrate Your Future</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_pending">Pending</string>
    <string name="menu_doodle">Doodle</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_todo">To-Do List</string>

    <string name="title_activity_before_login">BeforeLoginActivity</string>
    <string name="title_activity_signin">SigninActivity</string>
    <string name="child_email">Child Email</string>
    <string name="title_activity_signin_parent">SigninParentActivity</string>

    <string name="menu_achievements">Achievements</string>
    <string name="menu_rewards">Rewards</string>

</resources>