<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_todo">

    <fragment
        android:id="@+id/nav_home"
        android:name="ca.uwaterloo.cs.todoodle.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_doodle"
        android:name="ca.uwaterloo.cs.todoodle.ui.doodle.DoodleFragment"
        android:label="@string/menu_doodle"
        tools:layout="@layout/fragment_doodle" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="ca.uwaterloo.cs.todoodle.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_calendar"
        android:name="ca.uwaterloo.cs.todoodle.Example5Fragment"
        android:label="Calendar"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_todo"
        android:name="ca.uwaterloo.cs.todoodle.SecondFragment"
        android:label="@string/second_fragment_label"
        tools:layout="@layout/fragment_todo">

        <action
            android:id="@+id/action_SecondFragment_to_CreateTaskFormFragment"
            app:destination="@id/CreateTaskFormFragment" />
    </fragment>

    <fragment
        android:id="@+id/CreateTaskFormFragment"
        android:name="ca.uwaterloo.cs.todoodle.CreateTaskFormFragment"
        android:label="@string/create_task_form_fragment_label"
        tools:layout="@layout/fragment_create_task_form">

        <action
            android:id="@+id/action_CreateTaskFormFragment_to_SecondFragment"
            app:destination="@id/nav_todo" />
    </fragment>
</navigation>