<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/popup_window_background"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageButton
        android:id="@+id/clearButton"
        android:layout_width="48dp"
        android:layout_height="56dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="#0000"
        android:contentDescription="@string/title_activity_main"
        android:src="@drawable/ic_clear"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/deleteButton"
        android:layout_width="48dp"
        android:layout_height="56dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="#0000"
        android:contentDescription="@string/action_settings"
        android:src="@drawable/ic_delete"
        android:layout_marginEnd="70dp"
        android:layout_marginTop="10dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/editButton"
        android:layout_width="48dp"
        android:layout_height="56dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="#0000"
        android:contentDescription="@string/action_sign_in"
        android:src="@drawable/ic_create"
        android:layout_marginEnd="130dp"
        android:layout_marginTop="10dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/taskdialog_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="start"
        android:text="Title:"
        android:drawableLeft="@drawable/ic_square"
        android:drawablePadding="2dp"
        android:textAlignment="inherit"
        android:textColor="#546E7A"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/clearButton" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/taskdialog_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="start"
        android:drawableLeft="@drawable/ic_calendar"
        android:drawablePadding="2dp"
        android:text="Date:"
        android:textAlignment="inherit"
        android:textColor="#6D4C41"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/taskdialog_title"
        tools:layout_editor_absoluteX="20dp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/taskdialog_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:gravity="start"
        android:text="Category:"
        android:drawableLeft="@drawable/ic_category"
        android:drawablePadding="2dp"
        android:textAlignment="inherit"
        android:textColor="#6D4C41"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/taskdialog_date"
        tools:layout_editor_absoluteX="20dp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/taskdialog_notes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="start"
        android:text="Additional notes:"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:drawableLeft="@drawable/ic_notes"
        android:drawablePadding="2dp"
        android:textAlignment="inherit"
        android:layout_marginBottom="100dp"
        android:textColor="#6D4C41"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/taskdialog_category" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/taskdialog_format"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="start"
        android:text=""
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:textAlignment="inherit"
        android:layout_marginBottom="100dp"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/taskdialog_notes" />


</androidx.constraintlayout.widget.ConstraintLayout>
